# pavel_test_task

./: README.md  index.html  main.py  pyproject.toml
.github/workflows/: python-app.yml
22/: index.html
22/export/: influxDbData.txt
23/: index.html
23/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
23/export/: influxDbData.txt  prometheusData.txt
23/history/: categories-trend.json  history-trend.json  history.json
23/widgets/: duration-trend.json  executors.json  retry-trend.json  severity.json  summary.json
24/: index.html
24/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
24/export/: influxDbData.txt  prometheusData.txt
24/history/: history-trend.json  history.json  retry-trend.json
24/widgets/: categories-trend.json  duration-trend.json  executors.json  severity.json  summary.json
25/: index.html
25/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
25/export/: influxDbData.txt  prometheusData.txt
25/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
25/widgets/: duration-trend.json  environment.json  executors.json  severity.json  status-chart.json  summary.json
26/: index.html
26/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
26/export/: influxDbData.txt  prometheusData.txt
26/history/: categories-trend.json  duration-trend.json  (+1 more)
page/: base_page.py
steps/: __init__.py
tests/: conftest.py
utils/: __init__.py  api_const.py  http_methods.py  ui_const.py  user_creator.py
(+24 files in other folders)
